# GrooveCoasterController

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  flake.nix  platformio.ini
firmware/: CMakeLists.txt  flake.nix
firmware/include/: booster.h  buttons.h  pinmap.h
firmware/lib/ws2812/: CMakeLists.txt
firmware/lib/ws2812/include/: ws2812.h
firmware/lib/ws2812/src/: ws2812.c
firmware/src/: PiCoaster2040.c  buttons.c  main.c
hardware/: README.md
hardware/boards/lighting_side/: lighting_side.kicad_sch
hardware/boards/lighting_top/: lighting_top.kicad_pro
hardware/boards/mainboard/: fp-lib-table  mainboard.kicad_pcb  mainboard.kicad_pro  mainboard.kicad_sch
hardware/lighting_side/: lighting_side.kicad_pcb  lighting_side.kicad_pro
hardware/mainboard/: mainboard.kicad_sch
include/: Gamepad.h  PiCoaster2040.h  booster.h  boosterinput.h  common.h  effects.h  input_state.h  ledmanager.h
lib/TinyUSB_Gamepad/include/: usb_driver.h
lib/TinyUSB_Gamepad/src/: hid_driver.cpp  tusb_driver.cpp  usb_descriptors.cpp  xinput_driver.cpp
nix/: shell.nix
src/: Gamepad.cpp  Gamepad.h  PiCoaster2040.c  booster.c  booster.cpp  boosterinput.cpp  effects.cpp  input_state.c  ledmanager.cpp  main.c  main.cpp  pinmap.h
src/usb/: usb_descriptors.c
